--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -263,7 +263,7 @@ url_style curly
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
