--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -49,7 +49,7 @@ adjust_line_height  2
 
 #:     symbol_map codepoints Font Family Name
 
-# disable_ligatures never
+disable_ligatures always
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -74,7 +74,7 @@ adjust_line_height  2
 
 #: Cursor customization {{{
 
-cursor #d79921
+cursor #cc241d
 
 #: Default cursor color
 
