--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,8 +12,9 @@ set -g status-style 'bg=default fg=#a89984'
 # disabling far right
 set -g status-right ''
 # session name (far left)
-set  -g status-left ' #S '
-set  -g status-left-style 'fg=#d79921 bold'
+set -g status-left ' #S '
+set -g status-left-style 'fg=#d79921 bold'
+set -g status-left-length 30 # max size for session name
 # inactive window
 setw -g window-status-format '  #I #W#F  '
 # active window
@@ -21,7 +22,7 @@ setw -g window-status-current-format '#[bg=#d79921 fg=#3c3836,bold] #I #W#F '
 # set-window-option -g window-status-separator '#[bg=#3c3836 fg=#3c3836] '
 
 # reload tmux config
-bind r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf
 
 # start first pane from 1 not 0
 set -g base-index 1
@@ -35,36 +36,37 @@ set -g mouse on
 set-window-option -g mode-keys vi
 
 # vim-like pane switching
-bind -r a last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+bind-key -r a last-window
+bind-key -r k select-pane -U
+bind-key -r j select-pane -D
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
 
 # go to last active window
-bind -n 'M-1' select-window -t 1
-bind -n 'M-2' select-window -t 2
-bind -n 'M-3' select-window -t 3
-bind -n 'M-4' select-window -t 4
-bind -n 'M-5' select-window -t 5
-bind -n 'M-6' select-window -t 6
-bind -n 'M-7' select-window -t 7
-bind -n 'M-8' select-window -t 8
-bind -n 'M-9' select-window -t 9
-bind -n 'M-^' last-window
+bind-key -n 'M-1' select-window -t 1
+bind-key -n 'M-2' select-window -t 2
+bind-key -n 'M-3' select-window -t 3
+bind-key -n 'M-4' select-window -t 4
+bind-key -n 'M-5' select-window -t 5
+bind-key -n 'M-6' select-window -t 6
+bind-key -n 'M-7' select-window -t 7
+bind-key -n 'M-8' select-window -t 8
+bind-key -n 'M-9' select-window -t 9
+bind-key -n 'M-^' last-window
 
 # enter select mode
-bind -n 'M-c' copy-mode
-bind -n 'M-w' choose-tree
+bind-key -n 'M-c' copy-mode
+bind-key -n 'M-w' choose-tree
 # use v to trigger selection in select mode
-bind -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 # vim-like copy in select mode
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip > /dev/null"
 
 # Navigate windows
-bind -n 'M-.' next-window
-bind -n 'M-,' previous-window
+bind-key -n 'M-.' next-window
+bind-key -n 'M-,' previous-window
 
-# custom scripts
-bind-key -r i run-shell "tmux neww ~/bin/cht.sh"
+# Open project in new session
+bind-key -r o run-shell "tmux neww ~/bin/tmux-sessionizer"
 
+# TODO: bind is alias for bind-key, so change em all to one => consistency
