--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -465,12 +465,12 @@ inactive_tab_font_style normal
 #: Color scheme {{{
 
 foreground #fbf1c7
-# background #282828
-background #000000
+background #282828
+# background #000000
 
 #: The foreground and background colors
 
-background_opacity 0.80
+# background_opacity 0.80
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
