--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm*:Tc"
+set -ag terminal-overrides ",xterm-256color:RGB"
+# set -ga terminal-overrides ",xterm*:Tc"
 
 # change default prefix
 unbind C-b
