--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,15 @@
 Host aur.archlinux.org
   IdentityFile ~/.ssh/aur
   User aur
+
+Host gitlab.com
+  ProxyCommand          nc -X connect -x localhost:3477 %h %p
+  ServerAliveInterval   10
+
+Host bitbucket.org
+  ProxyCommand          nc -X connect -x localhost:3477 %h %p
+  ServerAliveInterval   10
+
+  #Host *
+  #  ProxyCommand          nc -X connect -x localhost:3477 %h %p
+  #  ServerAliveInterval   10
