--- a/.config/i3/config
+++ b/.config/i3/config
@@ -24,6 +24,9 @@ bindsym $mod+w exec rofi -show window
 new_window pixel 2
 # new_window normal 2
 
+# new windows should be opened in tab mode
+workspace_layout tabbed
+
 hide_edge_borders smart
 
 gaps inner 0
@@ -94,7 +97,6 @@ bindsym $mod+m exec i3-input -f "pango:FiraCode Nerd Font 12" \
   -P 'Goto: '
 
 # auto mark mostly used windows
-for_window [class="Slack"]                 mark s
 for_window [class="Thunar"]                mark f
 for_window [class="TelegramDesktop"]       mark t
 for_window [class="Google-chrome"]         mark c
@@ -255,7 +257,6 @@ bindsym $mod+c           exec google-chrome-stable --profile-directory=Default
 bindsym $mod+Mod1+c      exec google-chrome-stable --profile-directory='Profile 1'
 bindsym $mod+Mod1+f      exec thunar
 bindsym $mod+Mod1+t      exec telegram-desktop
-bindsym $mod+Mod1+s      exec slack
 bindsym $mod+Mod1+m      exec rhythmbox
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
 bindsym $mod+Mod1+Return exec alacritty -e nnn -ex
