--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -46,7 +46,7 @@ shadow-offset-y = -9;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
-  "class_g = 'kitty'",
+  "class_g = 'Alacritty'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
