--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,15 +11,16 @@ bind-key C-a send-prefix
 # default for bg makes it transparent
 set -g status-style 'bg=default fg=#a89984'
 # disabling far right
-set -g status-right ''
+set -g status-right ' #S '
 # session name (far left)
-set -g status-left ' #S '
-set -g status-left-style 'fg=#d79921 bold'
+# set -g status-left ' #S '
+set -g status-left ''
+set -g status-left-style 'fg=#a89984 bold'
 set -g status-left-length 30 # max size for session name
 # inactive window
-setw -g window-status-format '  #I #W#F  '
+setw -g window-status-format ' #I #W#F '
 # active window
-setw -g window-status-current-format '#[bg=#d79921 fg=#3c3836,bold] #I #W#F '
+setw -g window-status-current-format '#[bg=#a89984 fg=#282828,bold] #I #W#F '
 # set-window-option -g window-status-separator '#[bg=#3c3836 fg=#3c3836] '
 
 # reload tmux config
@@ -70,4 +71,3 @@ bind-key -n 'M-,' previous-window
 # Open project in new session
 bind-key -r o run-shell "tmux neww ~/bin/tmux-sessionizer"
 
-# TODO: bind is alias for bind-key, so change em all to one => consistency
