--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -19,29 +19,29 @@ colors:
   search:
     matches:
       foreground: "#282828"
-      background: "#fbf1c7"
+      background: "#a89984"
     focused_match:
       foreground: "#282828"
       background: "#d79921"
   hints:
     start:
       foreground: "#282828"
-      background: "#d79921"
+      background: "#a89984"
     end:
       foreground: "#282828"
-      background: "#d79921"
+      background: "#a89984"
   # top-right line indicator
   line_indicator:
     foreground: "#282828"
-    background: "#d79921"
+    background: "#a89984"
   # search bar
   footer_bar:
     background: "#282828"
-    foreground: "#fbf1c7"
+    foreground: "#a89984"
   # regular selected text
   selection:
     text: "#282828"
-    background: "#d79921"
+    background: "#a89984"
   normal:
     black: "#282828"
     red: "#cc241d"
