feat: add i3blocks colors & haskell

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -63,37 +63,37 @@ command=bash -c 'xkb-switch;xkb-switch -W'
 interval=persist
 
 [backlight]
-label= 
 command=/home/m47h4r/.config/i3/i3blocks-scripts/backlight
 color=#dadada
 signal=11
 interval=5
+markup=pango
 
 [volume]
-label= 
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/volume
 interval=5
 signal=11
+markup=pango
 
 [cpu]
-label= 
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/cpu
 interval=10
 markup=pango
 
 [memory]
-label= 
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/memory
 interval=10
+markup=pango
 
 [battery]
 label=  
 color=#dadada
 command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
 interval=30
+markup=pango
 
 [date]
 # label=  
