feat(shell): move to zsh

--- a/.config/espanso/match/base.yml
+++ b/.config/espanso/match/base.yml
@@ -63,3 +63,5 @@ matches:
     replace: "(booking)"
   - trigger: ";wb"
     replace: "(website)"
+  - trigger: ";vi"
+    replace: "visa|relocat|permit|legal"
