--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -59,8 +59,9 @@ color=#dadada
 [keymap]
 color=#dadada
 label= 
-command=bash -c 'xkb-switch;xkb-switch -W'
-interval=persist
+command=bash -c 'xkb-switch'
+interval=30
+signal=11
 
 [backlight]
 command=/home/m47h4r/.config/i3/i3blocks-scripts/backlight
