feat(update): add shellcheck, fix scripts according to shellckeck

--- a/.config/espanso/match/base.yml
+++ b/.config/espanso/match/base.yml
@@ -65,3 +65,5 @@ matches:
     replace: "(website)"
   - trigger: ";vi"
     replace: "visa|relocat|permit|legal"
+  - trigger: ";127"
+    replace: "http://127.0.0.1"
