--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,5 @@
 window:
-  opacity: 1.0
+  opacity: 0.8
 
 env:
   TERM: xterm-256color
@@ -13,7 +13,8 @@ font:
 colors:
   # regular text
   primary:
-    background: "#282828"
+    # background: "#282828"
+    background: "#000000"
     foreground: "#fbf1c7"
   # search matches
   search:
