--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -163,7 +163,7 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method =
+blur-method = "dual_kawase"
 # blur-size = 12
 #
 # blur-deviation = false
@@ -174,7 +174,7 @@ rounded-corners-exclude = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
@@ -199,9 +199,10 @@ blur-kern = "3x3box";
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 blur-background-exclude = [
-  "window_type = 'dock'",
+  # "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'slop'"
 ];
 
 #################################
@@ -411,7 +412,7 @@ log-level = "warn";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.9; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; opacity = 1.0; }
+  dock = { shadow = false; clip-shadow-above = true; opacity = 0.8; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.9; }
   dropdown_menu = { opacity = 0.9; }
