feat: use ranger instead of nnn

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -89,28 +89,30 @@ command=/home/m47h4r/.config/i3/i3blocks-scripts/memory
 interval=10
 markup=pango
 
-[battery]
-label=  
-color=#dadada
-command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
-interval=30
-markup=pango
+# [battery]
+# label=  
+# color=#dadada
+# command=/home/m47h4r/.config/i3/i3blocks-scripts/battery
+# interval=30
+# markup=pango
 
 [date]
-# label=  
 command=date '+%Y %a, %b %d'
 color=#dadada
 interval=60
 
 [jdate]
-# label=  
 command=/home/m47h4r/.config/i3/i3blocks-scripts/jdate
 color=#dadada
 interval=60
 
 [time]
-# label=  
 command=date '+%H:%M'
 interval=5
 color=#dadada
 
+[dunst-status]
+command=/home/m47h4r/.config/i3/i3blocks-scripts/dunst-status
+interval=60
+markup=pango
+signal=11
