--- a/.config/git/config
+++ b/.config/git/config
@@ -4,6 +4,8 @@
 [user]
   name = Mazhar Zandsalimi
   email = m47h4r@gmail.com
+[merge]
+  conflictstyle = diff3
 
 [includeIf "gitdir:~/mzd/code/gwat/"]
   path = gwat
