--- a/.config/i3/config
+++ b/.config/i3/config
@@ -243,9 +243,17 @@ bindsym $mod+shift+n exec ~/bin/monitor mono
 
 bindsym $mod+Mod1+shift+h exec ~/bin/huion-buttons
 
-# TODO: make keyboard layout into a mode so you can kill i3blocks on changing to any layout, ctrl+i => single letter (e, p, d, s)
-bindsym $mod+i exec ~/bin/kb_layout; exec pkill -SIGRTMIN+11 i3blocks
-bindsym $mod+shift+i exec ~/bin/kb_layout german; exec pkill -SIGRTMIN+11 i3blocks
+mode "keyboard-layout" {
+  bindsym e exec ~/bin/kb_layout en; exec pkill -SIGRTMIN+11 i3blocks; mode "default"
+  bindsym d exec ~/bin/kb_layout de; exec pkill -SIGRTMIN+11 i3blocks; mode "default"
+  bindsym p exec ~/bin/kb_layout pe; exec pkill -SIGRTMIN+11 i3blocks; mode "default"
+  bindsym k exec ~/bin/kb_layout ku; exec pkill -SIGRTMIN+11 i3blocks; mode "default"
+
+  bindsym Tab exec ~/bin/kb_layout en; exec pkill -SIGRTMIN+11 i3blocks; mode "default"
+  bindsym Return exec ~/bin/kb_layout en; exec pkill -SIGRTMIN+11 i3blocks; mode "default"
+  bindsym Escape exec ~/bin/kb_layout en; exec pkill -SIGRTMIN+11 i3blocks; mode "default"
+}
+bindsym $mod+Tab mode "keyboard-layout"
 
 bindsym $mod+semicolon exec ~/bin/lock
 
@@ -255,9 +263,6 @@ bindsym $mod+Mod1+j            exec playerctl --player=rhythmbox play-pause; exe
 bindsym $mod+Mod1+bracketleft  exec playerctl --player=rhythmbox position 10-
 bindsym $mod+Mod1+bracketright exec playerctl --player=rhythmbox position 10+
 
-# open rofi with mouse thumb button
-bindsym --whole-window --border $mod+Tab exec rofi -show window
-
 # find profiles in ~/.cache/google-chrome
 bindsym $mod+c           exec google-chrome-stable --profile-directory=Default
 bindsym $mod+Mod1+c      exec google-chrome-stable --profile-directory='Profile 1'
@@ -265,11 +270,12 @@ bindsym $mod+Mod1+f      exec thunar
 bindsym $mod+Mod1+t      exec telegram-desktop
 bindsym $mod+Mod1+m      exec rhythmbox
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
-bindsym $mod+Mod1+Return exec alacritty -e nnn -ex
+bindsym $mod+Mod1+Return exec alacritty -e ranger
 
 bindsym $mod+Ctrl+space       exec dunstctl close
 bindsym $mod+Ctrl+Shift+space exec dunstctl history-pop
 bindsym $mod+Ctrl+Return      exec dunstctl action
+bindsym $mod+Ctrl+Mod1+space  exec dunstctl set-paused toggle; exec pkill -SIGRTMIN+11 i3blocks
 
 # needed for i3blocks for capslock and numlock
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
