--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -3,9 +3,6 @@
 # == Options
 # ===================================================================
 
-# make sure w3m is installed as its the default image viewer
-set preview_images true
-
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
 set wrap_scroll true
@@ -27,5 +24,5 @@ map <a-v> umpv
 map <a-f> fzf
 
 # easier file/dir creation
-map nf console touch%space
-map nd console mkdir%space
+map <a-n>f console touch%space
+map <a-n>d console mkdir%space
