--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,7 @@ bind-key -n 'M-^' last-window
 
 # enter select mode
 bind-key -n 'M-c' copy-mode
-bind-key -n 'M-w' choose-tree
+bind-key -n 'M-s' choose-tree -s
 # use v to trigger selection in select mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 # vim-like copy in select mode
@@ -64,5 +64,6 @@ bind-key -n 'M-.' next-window
 bind-key -n 'M-,' previous-window
 
 # Open project in new session
-bind-key -r o run-shell "tmux neww ~/bin/tmux-sessionizer"
+# bind-key -r o run-shell "tmux neww ~/bin/tmux-sessionizer"
+bind-key -n 'M-o' run-shell "tmux neww ~/bin/tmux-sessionizer"
 
