feat(update): use mpd & ncmpcpp instead of rhythmbox

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -119,7 +119,7 @@ for_window [class="(?i)google-chrome"]                                     mark 
 for_window [class="(?i)mpv"]                                               mark v, floating enable
 for_window [class="(?i)postman"]                                           mark p
 for_window [class="(?i)altair graphqL client"]                             mark a
-for_window [class="(?i)rhythmbox"]                                         mark m
+for_window [title="(?i)ncmpcpp"]                                           mark m
 for_window [class="(?i)clash for windows"]                                 mark V
 for_window [title="(?i)fitimer"]                                           mark T
 for_window [class="(?i)dbeaver"]                                           mark D
@@ -250,18 +250,19 @@ bindsym $mod+o exec i3-input -f "pango:FiraCode Nerd Font 12" \
 bindsym $mod+i exec ~/bin/kb_layout; exec pkill -SIGRTMIN+11 i3blocks
 bindsym $mod+semicolon exec ~/bin/lock
 
-bindsym $mod+Mod1+period       exec playerctl --player=rhythmbox next; exec pkill -SIGRTMIN+11 i3blocks
-bindsym $mod+Mod1+comma        exec playerctl --player=rhythmbox previous; exec pkill -SIGRTMIN+11 i3blocks
-bindsym $mod+Mod1+j            exec playerctl --player=rhythmbox play-pause; exec pkill -SIGRTMIN+11 i3blocks
-bindsym $mod+Mod1+bracketleft  exec playerctl --player=rhythmbox position 10-
-bindsym $mod+Mod1+bracketright exec playerctl --player=rhythmbox position 10+
+bindsym $mod+Mod1+period       exec mpc next; exec pkill -SIGRTMIN+11 i3blocks
+bindsym $mod+Mod1+comma        exec mpc prev; exec pkill -SIGRTMIN+11 i3blocks
+bindsym $mod+Mod1+j            exec mpc toggle; exec pkill -SIGRTMIN+11 i3blocks
+bindsym $mod+Mod1+bracketleft  exec mpc seek -10
+bindsym $mod+Mod1+bracketright exec mpc seek +10
 
 # find profiles in ~/.cache/google-chrome
 bindsym $mod+c           exec google-chrome-stable --profile-directory=Default
 bindsym $mod+Mod1+c      exec google-chrome-stable --profile-directory='Profile 1'
 bindsym $mod+Mod1+f      exec thunar
 bindsym $mod+Mod1+t      exec telegram-desktop
-bindsym $mod+Mod1+m      exec rhythmbox
+bindsym $mod+Mod1+m      exec alacritty --title ncmpcpp -e ncmpcpp -q
+bindsym $mod+Mod1+p      exec alacritty --title fitimer -e fitimer
 bindsym $mod+Ctrl+c      exec ~/bin/clocks
 bindsym $mod+Mod1+Return exec alacritty -e ranger
 bindsym $mod+Mod1+d      exec dbeaver
