--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -50,7 +50,11 @@ shadow-exclude = [
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'i3-frame'"
+  "class_g = 'i3-frame'",
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -201,6 +205,10 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   # "window_type = 'dock'",
   "window_type = 'desktop'",
+  "window_type = 'menu'",
+  "window_type = 'dropdown_menu'",
+  "window_type = 'popup_menu'",
+  "window_type = 'tooltip'",
   "_GTK_FRAME_EXTENTS@:c",
   "class_g = 'slop'"
 ];
