fix(mpd): resolve pause on next track due & ipv4 binding

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -38,6 +38,9 @@ state_file "~/.mpd/state"
 
 # General music daemon options ################################################
 #
+# The following fixes the ipv4 binding issue
+bind_to_address "0.0.0.0"
+#
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
 #
@@ -47,5 +50,14 @@ restore_paused "yes"
 # music_directory are changed.
 #
 auto_update "yes"
+#
+###############################################################################
+
+# Audio Output ################################################################
+#
+audio_output {
+        type            "pipewire"
+        name            "PipeWire Sound Server"
+}
 #
 ###############################################################################
