--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -22,7 +22,7 @@ centered_cursor = yes
 progressbar_look = "—➤ "
 user_interface = classic
 header_visibility = no
-statusbar_visibility = no
+statusbar_visibility = yes
 connected_message_on_startup = yes
 titles_visibility = yes
 allow_for_physical_item_deletion = yes
