--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -5,6 +5,7 @@
  <alias>
   <family>sans-serif</family>
   <prefer>
+   <family>Noto Sans</family>
    <family>Vazirmatn</family>
    <family>Noto Color Emoji</family>
   </prefer>
