--- a/.config/i3/config
+++ b/.config/i3/config
@@ -69,15 +69,15 @@ bindsym $mod+Shift+Right exec ~/bin/i3-move-win-to-edge -r
 ################################################################################
 # Resize
 ################################################################################
-bindsym $mod+Control+h     resize shrink width  10 px or 10 ppt
-bindsym $mod+Control+j     resize grow   height 10 px or 10 ppt
-bindsym $mod+Control+k     resize shrink height 10 px or 10 ppt
-bindsym $mod+Control+l     resize grow   width  10 px or 10 ppt
-# bigger resize for floating windows
-bindsym $mod+Control+Left  resize shrink width  40 px or 40 ppt
-bindsym $mod+Control+Down  resize grow   height 40 px or 40 ppt
-bindsym $mod+Control+Up    resize shrink height 40 px or 40 ppt
-bindsym $mod+Control+Right resize grow   width  40 px or 40 ppt
+bindsym $mod+Control+h     resize shrink width  20 px or 5 ppt
+bindsym $mod+Control+j     resize grow   height 20 px or 5 ppt
+bindsym $mod+Control+k     resize shrink height 20 px or 5 ppt
+bindsym $mod+Control+l     resize grow   width  20 px or 5 ppt
+# bigger resize
+bindsym $mod+Control+Left  resize shrink width  40 px or 10 ppt
+bindsym $mod+Control+Down  resize grow   height 40 px or 10 ppt
+bindsym $mod+Control+Up    resize shrink height 40 px or 10 ppt
+bindsym $mod+Control+Right resize grow   width  40 px or 10 ppt
 
 bindsym $mod+b split h
 bindsym $mod+v split v
