--- a/.ssh/config
+++ b/.ssh/config
@@ -10,6 +10,14 @@ Host bitbucket.org
   ProxyCommand          nc -X connect -x localhost:3477 %h %p
   ServerAliveInterval   10
 
+Host github.com
+	HostName github.com
+	IdentityFile ~/.ssh/id_rsa
+
+Host github.com-fakir
+	HostName github.com
+	IdentityFile ~/.ssh/fakir-github
+
   # Host *
   #  ProxyCommand          nc -X connect -x localhost:3477 %h %p
   #  ServerAliveInterval   10
